# ara-icon-theme

./: ara-icon-theme.doap  ara-icon-theme.spec  meson.build
ara-dark/: index.theme
debian/: changelog  control  rules
meson/: post_install.py
src/bitmaps/: render-bitmaps.py
src/panel/: extract-dark-panel-icons.rb  extract-panel-icons.rb
src/scalable/: extract-symbolic-icons.rb
src/symlinks/: generate-symlinks.sh
src/symlinks/bitmaps/: apps.list  places.list
src/vector/: extract-vector-icons.rb
